Updated Game functionality